Add user profiling and weather service features
- Implemented user profiling system in `user_profile.py` to extract and manage user facts, profiles, and relationships over time.
- Created `weather.py` service to fetch current weather and forecasts using OpenWeatherMap API, including error handling and logging.
- Updated database schema in `schema.sql` to include tables for polls and user profiling, ensuring proper relationships and indexing for efficient data retrieval.

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,18 @@ GEMINI_MODEL=gemini-2.5-flash
 GEMINI_EMBED_MODEL=models/text-embedding-004
 DB_PATH=./gryag.db
 MAX_TURNS=50
+CONTEXT_SUMMARY_THRESHOLD=30
 PER_USER_PER_HOUR=5
 USE_REDIS=false
 REDIS_URL=redis://localhost:6379/0
 ADMIN_USER_IDS=
 RETENTION_DAYS=30
 ENABLE_SEARCH_GROUNDING=false
+
+# Weather API (OpenWeatherMap)
+OPENWEATHER_API_KEY=
+OPENWEATHER_BASE_URL=https://api.openweathermap.org/data/2.5
+
+# Currency API (ExchangeRate-API) 
+EXCHANGE_RATE_API_KEY=
+EXCHANGE_RATE_BASE_URL=https://v6.exchangerate-api.com
