feat: Add Ukrainian fact extraction patterns and rule-based extractor
- Implemented Ukrainian text fact extraction patterns for locations, preferences, languages, professions, and programming languages.
- Created a rule-based fact extractor that utilizes both Ukrainian and English patterns to extract user facts from messages.
- Added a profile summarization service to generate summaries based on accumulated user facts.
- Introduced a resource monitoring service to track CPU and memory usage, optimized for i5-6500 hardware.
- Enhanced telemetry with gauge metrics for monitoring resource usage.
- Updated user profile storage to support profile summarization and added new methods for managing user facts.
- Added a script to download the Phi-3-mini model for local fact extraction.
- Updated Docker configuration to support persistent model storage.
- Updated requirements to include new dependencies for model handling and scheduling.

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,38 @@ OPENWEATHER_BASE_URL=https://api.openweathermap.org/data/2.5
 # Currency API (ExchangeRate-API) 
 EXCHANGE_RATE_API_KEY=
 EXCHANGE_RATE_BASE_URL=https://v6.exchangerate-api.com
+
+# User Profiling
+ENABLE_USER_PROFILING=true
+USER_PROFILE_RETENTION_DAYS=365
+MAX_FACTS_PER_USER=100
+FACT_CONFIDENCE_THRESHOLD=0.7
+FACT_EXTRACTION_ENABLED=true
+PROFILE_SUMMARIZATION_INTERVAL_HOURS=24
+MIN_MESSAGES_FOR_EXTRACTION=5
+
+# Profile Summarization (Phase 2)
+# Background task that generates summaries of user profiles
+# Optimized for i5-6500: processes 1 profile at a time, runs at 3 AM
+ENABLE_PROFILE_SUMMARIZATION=false
+PROFILE_SUMMARIZATION_HOUR=3
+PROFILE_SUMMARIZATION_BATCH_SIZE=30
+MAX_PROFILES_PER_DAY=50
+
+# Fact Extraction Method (rule_based, local_model, hybrid, gemini)
+# - rule_based: Fast regex patterns (instant, 70% coverage, zero cost)
+# - local_model: Local LLM inference (100-500ms, 85% coverage, requires model)
+# - hybrid: Rule-based + local model + optional Gemini fallback (recommended)
+# - gemini: Legacy Gemini-only mode (not recommended)
+FACT_EXTRACTION_METHOD=hybrid
+
+# Local Model Configuration (required for local_model or hybrid modes)
+# Download model with: bash download_model.sh
+# Or manually: wget https://huggingface.co/microsoft/Phi-3-mini-4k-instruct-gguf/resolve/main/Phi-3-mini-4k-instruct-q4.gguf -O models/phi-3-mini-q4.gguf
+LOCAL_MODEL_PATH=models/phi-3-mini-q4.gguf
+LOCAL_MODEL_THREADS=4
+
+# Gemini Fallback (optional, disabled by default)
+# Only used in hybrid mode when rule-based and local model find <2 facts
+ENABLE_GEMINI_FALLBACK=false
+
