Implement event-driven processing system with priority queue and async workers
- Added EventQueue class for managing events with priority-based processing.
- Introduced CircuitBreaker for worker protection against failures.
- Implemented Event class for creating and managing events with priority and timestamp.
- Developed FactQualityManager for deduplication, conflict resolution, and validation of facts.
- Added MessageClassifier to filter low-value messages and classify their importance.
- Created ProactiveTrigger class for future implementation of proactive response handling.

--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,34 @@ LOCAL_MODEL_THREADS=4
 # Only used in hybrid mode when rule-based and local model find <2 facts
 ENABLE_GEMINI_FALLBACK=false
 
+# Continuous Learning System (Phase 1+)
+# Intelligent continuous monitoring that learns from all messages
+ENABLE_CONTINUOUS_MONITORING=true
+ENABLE_MESSAGE_FILTERING=false          # Phase 3: Start filtering low-value messages
+ENABLE_ASYNC_PROCESSING=false           # Phase 3: Enable async fact extraction
+
+# Conversation Window Settings
+# Groups messages into windows for better context understanding
+CONVERSATION_WINDOW_SIZE=8              # Messages per window (3-20)
+CONVERSATION_WINDOW_TIMEOUT=180         # Seconds before window closes (60-600)
+MAX_CONCURRENT_WINDOWS=100              # Max windows tracked simultaneously
+
+# Event Queue Settings
+# Async processing with priority queue and circuit breakers
+MONITORING_WORKERS=3                    # Number of async workers (1-10)
+MAX_QUEUE_SIZE=1000                     # Max queued events (100-10000)
+ENABLE_CIRCUIT_BREAKER=true             # Fault tolerance
+CIRCUIT_BREAKER_THRESHOLD=5             # Failures before opening circuit (3-20)
+CIRCUIT_BREAKER_TIMEOUT=60              # Seconds before retry (30-300)
+
+# Proactive Response Settings (Phase 4)
+# Bot proactively joins conversations when it can help
+ENABLE_PROACTIVE_RESPONSES=false        # Phase 4: Enable proactive engagement
+PROACTIVE_CONFIDENCE_THRESHOLD=0.75     # Minimum confidence to respond (0.5-1.0)
+PROACTIVE_COOLDOWN_SECONDS=300          # Min seconds between proactive responses
+
+# System Health Monitoring
+ENABLE_HEALTH_METRICS=true              # Track system health
+HEALTH_CHECK_INTERVAL=300               # Seconds between health checks
+
+
