--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
-version: "3.9"
-
 services:
+  redis:
+    image: redis:7-alpine
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    command: redis-server --appendonly yes --maxmemory 512mb --maxmemory-policy allkeys-lru
+    volumes:
+      - ./redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   bot:
     build:
       context: .
@@ -9,9 +21,13 @@ services:
       - .env
     volumes:
       - ./:/app
-      - models:/app/models # Persistent volume for local models
+      - ./models:/app/models # Persistent volume for local models stored in codebase
     restart: unless-stopped
-
-volumes:
-  models:
-    driver: local
+    depends_on:
+      redis:
+        condition: service_healthy
+    environment:
+      - USE_REDIS=true
+      - REDIS_URL=redis://redis:6379/0
+# Note: Redis data and models are now stored in local folders (./redis-data and ./models)
+# This keeps all persistent data within the codebase directory for easier backup and management
