Add Ukrainian Gryag persona and English assistant templates; implement memory tools and timezone handling
- Created Ukrainian Gryag persona with unique communication style and memory management tools.
- Added English assistant persona template for professional interactions.
- Implemented memory tools for storing, recalling, updating, and forgetting user facts.
- Developed timezone handling to ensure accurate time context in responses.
- Added tests for bot learning integration, memory tools, and timezone functionality.
- Updated requirements and added response templates for both Ukrainian and English.
- Created verification scripts for bot self-learning and timezone solutions.

--- a/.env.example
+++ b/.env.example
@@ -37,22 +37,11 @@ PROFILE_SUMMARIZATION_HOUR=3
 PROFILE_SUMMARIZATION_BATCH_SIZE=30
 MAX_PROFILES_PER_DAY=50
 
-# Fact Extraction Method (rule_based, local_model, hybrid, gemini)
-# - rule_based: Fast regex patterns (instant, 70% coverage, zero cost)
-# - local_model: Local LLM inference (100-500ms, 85% coverage, requires model)
-# - hybrid: Rule-based + local model + optional Gemini fallback (recommended)
-# - gemini: Legacy Gemini-only mode (not recommended)
-FACT_EXTRACTION_METHOD=hybrid
-
-# Local Model Configuration (required for local_model or hybrid modes)
-# Download model with: bash download_model.sh
-# Or manually: wget https://huggingface.co/microsoft/Phi-3-mini-4k-instruct-gguf/resolve/main/Phi-3-mini-4k-instruct-q4.gguf -O models/phi-3-mini-q4.gguf
-LOCAL_MODEL_PATH=models/phi-3-mini-q4.gguf
-LOCAL_MODEL_THREADS=4
-
-# Gemini Fallback (optional, disabled by default)
-# Only used in hybrid mode when rule-based and local model find <2 facts
-ENABLE_GEMINI_FALLBACK=false
+# Fact Extraction Configuration
+# Uses Google Gemini API (rule-based patterns + optional Gemini fallback)
+# - Fast regex patterns for common cases (instant, 70% coverage)
+# - Gemini API fallback for complex cases (when rule-based finds <2 facts)
+ENABLE_GEMINI_FACT_EXTRACTION=true
 
 # Continuous Learning System (Phase 1+)
 # Intelligent continuous monitoring that learns from all messages
@@ -83,5 +72,71 @@ PROACTIVE_COOLDOWN_SECONDS=300          # Min seconds between proactive response
 # System Health Monitoring
 ENABLE_HEALTH_METRICS=true              # Track system health
 HEALTH_CHECK_INTERVAL=300               # Seconds between health checks
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# Universal Bot Configuration (Phase 1)
+# Makes the bot configurable for different personalities, languages, and chats
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# Bot Identity
+# Display name used in responses and error messages
+BOT_NAME=gryag
+
+# Telegram username (without @), auto-detected from bot token if not set
+# BOT_USERNAME=gryag_bot
+
+# Comma-separated trigger words for bot activation (empty = use persona config)
+# Examples: "гряг,gryag" or "bot,assistant,help"
+BOT_TRIGGER_PATTERNS=
+
+# Redis key prefix for quota tracking (change if running multiple bot instances)
+REDIS_NAMESPACE=gryag
+
+# Prefix for admin commands (e.g., /gryagban, /gryagreset)
+# Set to bot name to keep commands consistent
+COMMAND_PREFIX=gryag
+
+# Personality Configuration
+# Path to persona YAML file (empty = use default hardcoded persona)
+# Examples: personas/ukrainian_gryag.yaml, personas/english_assistant.yaml
+PERSONA_CONFIG=
+
+# Path to response templates JSON (empty = use default hardcoded responses)
+# Examples: response_templates/ukrainian.json, response_templates/english.json
+RESPONSE_TEMPLATES=
+
+# Primary language code (uk, en, etc.)
+BOT_LANGUAGE=uk
+
+# Allow strong language in responses
+ENABLE_PROFANITY=true
+
+# Chat Management
+# Bot behavior mode: global (operate everywhere), whitelist (only allowed chats), blacklist (exclude blocked chats)
+BOT_BEHAVIOR_MODE=global
+
+# Comma-separated chat IDs for whitelist mode (use /gryagchatinfo to discover IDs)
+# Example: ALLOWED_CHAT_IDS=-100123456789,-100987654321
+ALLOWED_CHAT_IDS=
+
+# Comma-separated chat IDs for blacklist mode
+BLOCKED_CHAT_IDS=
+
+# Comma-separated chat IDs where admin commands work (empty = all chats)
+# Example: ADMIN_CHAT_IDS=-100123456789
+ADMIN_CHAT_IDS=
+
+# Only operate in groups, ignore private chats
+IGNORE_PRIVATE_CHATS=false
+
+# Feature Toggles
+# Enable chat filtering based on BOT_BEHAVIOR_MODE and chat ID lists
+ENABLE_CHAT_FILTERING=false
+
+# Use configurable command names based on COMMAND_PREFIX
+ENABLE_CUSTOM_COMMANDS=false
+
+# Use template-based responses from RESPONSE_TEMPLATES
+ENABLE_PERSONA_TEMPLATES=false
 
 
