feat: Implement SDK migration from google-generativeai to google-genai
- Added SDK Migration Plan document detailing migration goals, API differences, and steps.
- Updated requirements to use google-genai>=0.2.0.
- Refactored GeminiClient to accommodate new SDK structure and API.
- Updated tool definitions and type handling for new SDK.
- Implemented file logging system with rotation and cleanup.
- Removed throttling system, including middleware and related database tables.
- Created scripts for log cleanup and throttle table removal.
- Added verification scripts for throttle removal and logging implementation.
- Updated documentation and changelog to reflect changes.

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,17 @@ GEMINI_EMBED_MODEL=models/text-embedding-004
 DB_PATH=./gryag.db
 MAX_TURNS=50
 CONTEXT_SUMMARY_THRESHOLD=30
-PER_USER_PER_HOUR=5
 USE_REDIS=false
 REDIS_URL=redis://localhost:6379/0
 ADMIN_USER_IDS=
 RETENTION_DAYS=30
 ENABLE_SEARCH_GROUNDING=false
+
+# Media Handling
+# Maximum number of media items (images/videos) to include in context history
+# Gemma models: 32 max (set to 28 conservative)
+# Gemini models: Higher limits (can increase to 50+)
+GEMINI_MAX_MEDIA_ITEMS=28
 
 # Weather API (OpenWeatherMap)
 OPENWEATHER_API_KEY=
@@ -89,9 +94,6 @@ BOT_NAME=gryag
 # Examples: "гряг,gryag" or "bot,assistant,help"
 BOT_TRIGGER_PATTERNS=
 
-# Redis key prefix for quota tracking (change if running multiple bot instances)
-REDIS_NAMESPACE=gryag
-
 # Prefix for admin commands (e.g., /gryagban, /gryagreset)
 # Set to bot name to keep commands consistent
 COMMAND_PREFIX=gryag
@@ -138,5 +140,34 @@ ENABLE_CUSTOM_COMMANDS=false
 
 # Use template-based responses from RESPONSE_TEMPLATES
 ENABLE_PERSONA_TEMPLATES=false
+
+# ═══════════════════════════════════════════════════════════════════
+# Logging Configuration
+# ═══════════════════════════════════════════════════════════════════
+
+# Directory for log files (created automatically)
+LOG_DIR=./logs
+
+# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
+
+# Log format: text (human-readable) or json (structured)
+LOG_FORMAT=text
+
+# Auto-delete logs older than this many days
+LOG_RETENTION_DAYS=7
+
+# Maximum size per log file before rotation (bytes)
+# Default: 10 MB = 10485760 bytes
+LOG_MAX_BYTES=10485760
+
+# Number of rotated backup files to keep
+LOG_BACKUP_COUNT=5
+
+# Enable console output (stdout/stderr)
+ENABLE_CONSOLE_LOGGING=true
+
+# Enable file logging
+ENABLE_FILE_LOGGING=true
 
 
