--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,16 +12,28 @@ requires-python = ">=3.11"
 license = { text = "MIT" }
 dependencies = [
     "aiogram>=3.5",
-    "google-generativeai>=0.8",
+    "google-genai>=0.2.0",
     "aiosqlite>=0.20",
     "pydantic>=2.6",
     "pydantic-settings>=2.2",
     "redis>=5.0",
     "aiohttp>=3.9",
     "python-dotenv>=1.0",
-    "llama-cpp-python>=0.2.79",
     "apscheduler>=3.10",
     "psutil>=5.9",
+    "tzdata>=2024.1",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0",
+    "pytest-asyncio>=0.23",
+    "pytest-cov>=4.0",
+    "pytest-timeout>=2.2",
+    "ruff>=0.1.0",
+    "black>=23.0",
+    "mypy>=1.7",
+    "isort>=5.12",
 ]
 
 [project.urls]
