--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,18 @@ pydantic-settings>=2.2
 redis>=5.0
 aiohttp>=3.9
 python-dotenv>=1.0
-llama-cpp-python>=0.2.79
 apscheduler>=3.10
 psutil>=5.9
 tzdata>=2024.1
+
+# Testing dependencies
+pytest>=8.0
+pytest-asyncio>=0.23
+pytest-cov>=4.0
+pytest-timeout>=2.2
+
+# Development dependencies
+ruff>=0.1.0
+black>=23.0
+mypy>=1.7
+isort>=5.12
