Add diagnostics for token overflow, persona integration tests, and compact format verification
- Introduced a new diagnostic script to check for potential token overflow issues in the database and context settings.
- Added tests for PersonaLoader integration, ensuring correct loading of personas and response templates.
- Created a verification script for the compact conversation format, demonstrating token savings and format comparison.
- Implemented integration tests for the compact format, validating end-to-end functionality and token efficiency.
- Developed unit tests for the conversation_formatter module, covering various formatting and token estimation scenarios.
- Updated requirements to include PyYAML for YAML file handling.

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,14 @@ GEMINI_API_KEY=
 GEMINI_MODEL=gemini-2.5-flash
 GEMINI_EMBED_MODEL=models/text-embedding-004
 DB_PATH=./gryag.db
-MAX_TURNS=50
+
+# Context Settings
+# MAX_TURNS: Number of conversation turns to include in history (default: 20)
+# Each turn = 1 user message + 1 bot response = 2 messages total
+# WARNING: Higher values can cause token overflow errors!
+# Recommended: 15-20 for normal use, 30-40 for long conversations
+MAX_TURNS=20
+
 CONTEXT_SUMMARY_THRESHOLD=30
 USE_REDIS=false
 REDIS_URL=redis://localhost:6379/0
@@ -113,6 +120,20 @@ BOT_LANGUAGE=uk
 # Allow strong language in responses
 ENABLE_PROFANITY=true
 
+# ═══════════════════════════════════════════════════════════════════
+# Compact Conversation Format (Phase 6 - October 2025)
+# ═══════════════════════════════════════════════════════════════════
+
+# Enable compact plain text conversation format instead of verbose JSON
+# Expected token savings: 70-80% (from ~150-200 to ~20-40 tokens per message)
+# Format: "Alice#987654: Hello world" instead of JSON with metadata
+# WARNING: Experimental feature, disable if you encounter issues
+ENABLE_COMPACT_CONVERSATION_FORMAT=false
+
+# Maximum conversation history in compact format
+# Can be higher than MAX_TURNS due to token efficiency (default: 50)
+COMPACT_FORMAT_MAX_HISTORY=50
+
 # Chat Management
 # Bot behavior mode: global (operate everywhere), whitelist (only allowed chats), blacklist (exclude blocked chats)
 BOT_BEHAVIOR_MODE=global
@@ -139,7 +160,7 @@ ENABLE_CHAT_FILTERING=false
 ENABLE_CUSTOM_COMMANDS=false
 
 # Use template-based responses from RESPONSE_TEMPLATES
-ENABLE_PERSONA_TEMPLATES=false
+ENABLE_PERSONA_TEMPLATES=true
 
 # ═══════════════════════════════════════════════════════════════════
 # Logging Configuration
