feat: Add separate API key support for image generation
- Introduced `IMAGE_GENERATION_API_KEY` environment variable for using a distinct API key for image generation.
- Updated configuration and documentation to reflect the new feature.
- Ensured backward compatibility with existing deployments.

fix: Resolve context retrieval issue

- Corrected `ContextStore.recent()` method to interpret `max_turns` as conversation turns instead of raw message count.
- Adjusted multi-level context manager to align with the new logic.
- Added verification script to confirm the fix.

fix: Address media context bug

- Updated `_estimate_tokens()` method to include media parts in token estimation.
- Added debug logging for media tracking during context assembly.
- Created unit tests to ensure media is properly accounted for in context.

fix: Investigate fact remember/forget functionality

- Conducted investigation into user reports of facts not being remembered or forgotten.
- Confirmed that the system is functioning correctly and provided recommendations for user education.

chore: Add diagnostic scripts for fact visibility and operations

- Implemented `check_fact_visibility.py` to diagnose fact storage and retrieval issues.
- Created `test_fact_operations.py` to validate fact operations and debug potential issues.

chore: Update requirements

- Added `Pillow` as a dependency for image processing.

test: Add unit tests for media context handling

- Created `test_multi_level_context_media.py` to verify that media parts are included in token estimation.

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,14 @@ OPENWEATHER_BASE_URL=https://api.openweathermap.org/data/2.5
 EXCHANGE_RATE_API_KEY=
 EXCHANGE_RATE_BASE_URL=https://v6.exchangerate-api.com
 
+# Image Generation (Gemini 2.5 Flash Image)
+# Uses gemini-2.5-flash-image model for text-to-image generation
+# Cost: ~$0.04 per image ($30 per 1M tokens, 1290 tokens per image)
+# Admins (ADMIN_USER_IDS) bypass daily limits
+ENABLE_IMAGE_GENERATION=false
+IMAGE_GENERATION_API_KEY=  # Optional: Use separate API key for images (defaults to GEMINI_API_KEY if not set)
+IMAGE_GENERATION_DAILY_LIMIT=1
+
 # User Profiling
 ENABLE_USER_PROFILING=true
 USER_PROFILE_RETENTION_DAYS=365
