--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosqlite>=0.20
 pydantic>=2.6
 pydantic-settings>=2.2
 redis>=5.0
+Pillow>=10.3.0
 aiohttp>=3.9
 python-dotenv>=1.0
 apscheduler>=3.10
