Add unit tests for chat tools, memory tools, and media handling
- Implemented unit tests for tool registry, including tool definitions and callbacks.
- Added tests for image generation and editing tools, ensuring proper registration and functionality.
- Created validation tests to ensure no duplicate function names and proper parameter schemas in tool definitions.
- Enhanced conversation formatting tests to include reply context and media descriptions.
- Developed unit tests for memory tools, focusing on semantic ranking of facts.
- Added comprehensive tests for video and sticker context handling, ensuring correct media descriptions and historical media collection.

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,30 @@ DB_PATH=./gryag.db
 MAX_TURNS=20
 
 CONTEXT_SUMMARY_THRESHOLD=30
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# Command and Feature Throttling System
+# Prevents spam and abuse with multiple layers of rate limiting
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# Command Throttling - Limits ALL bot commands (prevents command spam)
+ENABLE_COMMAND_THROTTLING=true      # Enable command cooldown (recommended)
+COMMAND_COOLDOWN_SECONDS=300        # Cooldown between commands (300 = 5 minutes)
+                                    # Range: 60-3600 seconds (1 min - 1 hour)
+                                    # Admins bypass this limit
+
+# Feature-Specific Throttling - Per-feature rate limits (weather, currency, etc.)
+ENABLE_FEATURE_THROTTLING=true      # Enable per-feature throttling
+ENABLE_ADAPTIVE_THROTTLING=true     # Enable reputation-based limit adjustments
+
+# Per-feature hourly limits (admins bypass all limits)
+WEATHER_LIMIT_PER_HOUR=10          # Weather API calls per hour
+CURRENCY_LIMIT_PER_HOUR=20         # Currency conversions per hour
+WEB_SEARCH_LIMIT_PER_HOUR=5        # Web searches per hour (if enabled)
+MEMORY_LIMIT_PER_HOUR=30           # Memory operations (remember/recall/update) per hour
+POLL_LIMIT_PER_DAY=5               # Poll creations per day
+
+# Note: Image generation limits are controlled separately (see Image Generation section)
 USE_REDIS=false
 REDIS_URL=redis://localhost:6379/0
 ADMIN_USER_IDS=
@@ -23,6 +47,17 @@ ENABLE_SEARCH_GROUNDING=false
 # Gemma models: 32 max (set to 28 conservative)
 # Gemini models: Higher limits (can increase to 50+)
 GEMINI_MAX_MEDIA_ITEMS=28
+
+# Maximum historical media items from conversation context (older messages)
+# Set to 0 to disable historical media entirely
+# Replied message media is ALWAYS included regardless of this setting
+GEMINI_MAX_MEDIA_ITEMS_HISTORICAL=5
+
+# Maximum video/animation items to include in total (across current + historical)
+# Videos over this limit are replaced with text descriptions from previous bot responses
+# Set to 0 to exclude all videos (descriptions only), or higher to allow more
+# Recommended: 1 (reduces API errors and improves response quality)
+GEMINI_MAX_VIDEO_ITEMS=1
 
 # Weather API (OpenWeatherMap)
 OPENWEATHER_API_KEY=
@@ -36,9 +71,10 @@ EXCHANGE_RATE_BASE_URL=https://v6.exchangerate-api.com
 # Uses gemini-2.5-flash-image model for text-to-image generation
 # Cost: ~$0.04 per image ($30 per 1M tokens, 1290 tokens per image)
 # Admins (ADMIN_USER_IDS) bypass daily limits
+# Quota only consumed on successful generation (failures don't count)
 ENABLE_IMAGE_GENERATION=false
 IMAGE_GENERATION_API_KEY=  # Optional: Use separate API key for images (defaults to GEMINI_API_KEY if not set)
-IMAGE_GENERATION_DAILY_LIMIT=1
+IMAGE_GENERATION_DAILY_LIMIT=3
 
 # User Profiling
 ENABLE_USER_PROFILING=true
