feat: Update rate limiter error message cooldown to 1 hour
feat: Add first_name and last_name fields to user_profiles table

fix: Resolve message formatting issues for bold, italic, and spoiler tags

docs: Document formatting consistency fix in FORMATTING_CONSISTENCY_FIX.md

chore: Update Ukrainian persona to allow MarkdownV2 formatting

test: Enhance token budget tests with user and model message pairs

refactor: Update user fact repository tests to use new field names

test: Add unit tests for Gemini handling of empty tool responses

test: Implement unit tests for Markdown escaping functionality

test: Add unit tests for response text cleaning to remove markers

test: Create unit tests for Telegram HTML formatting utilities

--- a/.env.example
+++ b/.env.example
@@ -152,7 +152,7 @@ COMMAND_PREFIX=gryag
 # Personality Configuration
 # Path to persona YAML file (empty = use default hardcoded persona)
 # Examples: personas/ukrainian_gryag.yaml, personas/english_assistant.yaml
-PERSONA_CONFIG=
+PERSONA_CONFIG=personas/ukrainian_gryag.yaml
 
 # Path to response templates JSON (empty = use default hardcoded responses)
 # Examples: response_templates/ukrainian.json, response_templates/english.json
