fix: resolve Telegram formatting issues with PROTECTED placeholders and username underscores
- Fixed issue where placeholders like **PROTECTED1** were displayed literally instead of formatted text due to HTML escaping of null byte placeholders.
- Updated placeholder mechanism to use Unicode Private Use Area characters to prevent HTML escaping issues.
- Added preprocessing step to protect Telegram usernames from being treated as italic markdown, ensuring underscores are preserved.
- Implemented comprehensive tests for formatting functions to verify correct behavior for both PROTECTED placeholders and username formatting.
- Documented changes in README and created a detailed fix log for the formatting issues.
- Added "Ignore donation message" feature to prevent bot from sending donation messages to specified groups, with corresponding tests and documentation updates.

--- a/.env.example
+++ b/.env.example
@@ -76,6 +76,12 @@ ENABLE_IMAGE_GENERATION=false
 IMAGE_GENERATION_API_KEY=  # Optional: Use separate API key for images (defaults to GEMINI_API_KEY if not set)
 IMAGE_GENERATION_DAILY_LIMIT=3
 
+# Donation Message Configuration
+# Comma-separated chat IDs to exclude from donation messages (use /gryagchatinfo to discover IDs)
+# Example: DONATION_IGNORED_CHAT_IDS=-100123456789,-100987654321
+# These chats will NEVER receive donation messages, even if active
+DONATION_IGNORED_CHAT_IDS=
+
 # User Profiling
 ENABLE_USER_PROFILING=true
 USER_PROFILE_RETENTION_DAYS=365
