feat(gemini): Implement round-robin key rotation for Gemini API with cooldowns
- Added _KeyPool class for managing API keys with cooldowns and quota handling.
- Updated GeminiClient to support multiple API keys and free-tier mode.
- Enhanced error handling for quota errors during content generation and embedding.
- Introduced logging for key rotation and quota exhaustion warnings.

feat(monitoring): Update user profile store type to support adapters

- Modified ContinuousMonitor to accept UserProfileStore or UserProfileStoreAdapter.

feat(persona): Ensure system prompts are plain text without placeholders

- Added validation to prevent system prompts from containing template placeholders.

feat(profile_summarization): Update profile summarization logic

- Enhanced UserProfileStoreAdapter with methods to get profiles needing summarization and update summaries.

feat(redis): Update RedisLike protocol for better type hints

- Improved type hints for Redis-like operations in redis_types.py.

feat(user_profile_adapter): Add methods for profile summarization

- Implemented methods to retrieve user profiles needing summarization and update user summaries.

feat(database): Extend messages table with sender metadata

- Added sender role, name, username, and bot status to messages schema.

feat(docker): Add Cloudflare WARP service for secure connections

- Introduced warp service in docker-compose with health checks and entrypoint script.

docs(changelog): Document recent changes and features

- Updated CHANGELOG.md and README.md with recent feature additions and improvements.

fix(personas): Update assistant persona templates for clarity

- Revised English and Ukrainian assistant templates for improved clarity and consistency.

test(gemini): Add unit tests for Gemini free-tier key rotation

- Implemented tests to verify key rotation behavior under quota limits for generate and embed operations.

test(telegram): Enhance tests for Telegram formatting

- Added tests for striket

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 TELEGRAM_TOKEN=
 GEMINI_API_KEY=
+FREE_TIER_MODE=false                 # Enable rotation across GEMINI_API_KEYS (set to true for free-tier pooling)
+GEMINI_API_KEYS=                      # Comma-separated list of backup Gemini API keys (used when FREE_TIER_MODE=true)
+GEMINI_QUOTA_BLOCK_SECONDS=86400      # Seconds to sideline a key after quota exhaustion (24h default)
 GEMINI_MODEL=gemini-2.5-flash
 GEMINI_EMBED_MODEL=models/text-embedding-004
 DB_PATH=./gryag.db
