feat: Implement donation command feedback and scheduler analysis
- Added success and failure messages to the `/gryagdonate` command in admin handler.
- Verified and documented the donation scheduler's configuration and functionality.
- Created a detailed analysis document for the donation scheduler and command issues.
- Removed unused fact extractor and continuous monitor references from various files.
- Introduced a reset_database script to wipe and reinitialize the SQLite database.
- Updated Dockerfile and entrypoint for Cloudflare WARP service with improved registration and connection handling.
- Added a new volume for warp state in docker-compose configuration.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       context: .
       dockerfile: scripts/warp/Dockerfile
     container_name: gryag-warp
+    volumes:
+      - warp-state:/var/lib/cloudflare-warp
     cap_add:
       - NET_ADMIN
       - NET_RAW
@@ -55,3 +57,6 @@ services:
       - REDIS_URL=redis://redis:6379/0
 # Note: Redis data and models are now stored in local folders (./redis-data and ./models)
 # This keeps all persistent data within the codebase directory for easier backup and management
+
+volumes:
+  warp-state:
