feat: Add separate API key for web search grounding
- Introduced a new configuration option for a separate Google Gemini API key for web search operations.
- Updated relevant code to utilize the new key while maintaining backward compatibility.
- Enhanced documentation to reflect the new feature and its benefits.

fix: Resolve memory integration issue with /gryagfacts command

- Modified the /gryagfacts command to query both old and new memory systems.
- Ensured unified results are displayed for user facts and memories.
- Updated rendering formats for compact and verbose outputs.

improvement: Enhance command throttling system

- Implemented a smart warning system to reduce notification spam for throttled commands.
- Updated error message format for clarity and conciseness.
- Verified existing command filtering logic remains intact.

refactor: Update Ukrainian Gryag persona templates

- Simplified communication style and memory management guidelines.
- Removed deprecated memory management instructions and adjusted available tools.

test: Rewrite tests for new memory system

- Created new test files to accommodate the simplified memory system.
- Marked existing tests for removal or rewriting to align with the new MemoryRepository structure.

--- a/.dockerignore
+++ b/.dockerignore
@@ -47,3 +47,12 @@ test_*.py
 check_*.py
 diagnose.py
 verify_*.py
+
+# Coverage and logs
+htmlcov/
+logs/
+coverage.xml
+
+# Scripts directory (except warp setup needed for Docker)
+scripts/
+!scripts/warp/
