--- a/.env.example
+++ b/.env.example
@@ -79,6 +79,11 @@ ENABLE_IMAGE_GENERATION=false
 IMAGE_GENERATION_API_KEY=  # Optional: Use separate API key for images (defaults to GEMINI_API_KEY if not set)
 IMAGE_GENERATION_DAILY_LIMIT=3
 
+# Web Search Configuration
+# Optional separate API key for web search grounding (defaults to GEMINI_API_KEY if not set)
+# Useful for isolating billing and quotas between search and other features
+WEB_SEARCH_API_KEY=
+
 # Donation Message Configuration
 # Comma-separated chat IDs to exclude from donation messages (use /gryagchatinfo to discover IDs)
 # Example: DONATION_IGNORED_CHAT_IDS=-100123456789,-100987654321
