feat: Add system context block feature to enhance model context
- Introduced `ENABLE_SYSTEM_CONTEXT_BLOCK` setting to toggle the inclusion of a monospace block in system instructions, containing the last N messages.
- Implemented validation for new settings related to the system context block in `app/config.py`.
- Enhanced chat handling in `app/handlers/chat.py` to build and format the system context block, including media markers for trigger and reply messages.
- Updated user profile methods in `app/services/user_profile.py` to handle deprecated user facts table and ensure backward compatibility.
- Documented the new system context block feature and its configuration options in `docs/overview/MODEL_CONTEXT_PIPELINE.md` and `docs/overview/CURRENT_CONVERSATION_PATTERN.md`.
- Adjusted persona template to reflect new memory management rules.
- Added unit tests to ensure proper handling of empty tool responses in `tests/unit/test_gemini_empty_tool_response.py`.

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,13 @@ MAX_TURNS=20
 
 CONTEXT_SUMMARY_THRESHOLD=30
 
+# System context block (monospace history injected into system prompt)
+ENABLE_SYSTEM_CONTEXT_BLOCK=false
+SYSTEM_CONTEXT_BLOCK_MAX_MESSAGES=60
+SYSTEM_CONTEXT_BLOCK_INCLUDE_META=true
+SYSTEM_CONTEXT_BLOCK_THREAD_ONLY=true
+SYSTEM_CONTEXT_BLOCK_MEDIA_SCOPE=trigger_and_reply
+
 # ═══════════════════════════════════════════════════════════════════════════════
 # Command and Feature Throttling System
 # Prevents spam and abuse with multiple layers of rate limiting
@@ -248,5 +255,4 @@ ENABLE_CONSOLE_LOGGING=true
 
 # Enable file logging
 ENABLE_FILE_LOGGING=true
-
 
