feat(gemini): Enhance thinking support detection for Gemini 2.5 models
- Updated `_detect_thinking_support()` to correctly identify all Gemini 2.5 series models (including -latest variants) as supporting thinking features.
- Improved docstring with official thinking budget ranges from Google documentation.
- Added unit tests to verify detection logic for various Gemini models.

fix(docker): Configure static IP for Redis access

- Assigned static IP to Redis service in docker-compose for better network management.
- Updated bot service to access Redis via the static IP.

chore(docs): Update CHANGELOG and README for recent changes

- Documented fixes and enhancements related to thinking mode and processing locks.
- Added details about the new processing lock middleware and its impact on user experience.

docs(plans): Introduce plan for message processing lock

- Created a detailed plan outlining the implementation of a per-user message processing lock to prevent multiple simultaneous responses.
- Included risk assessment, success metrics, and future enhancements.

test(gemini): Add unit tests for thinking support detection

- Implemented tests to validate the thinking support detection logic for various Gemini models, ensuring accurate behavior.

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,25 @@ MEMORY_LIMIT_PER_HOUR=30           # Memory operations (remember/recall/update) 
 POLL_LIMIT_PER_DAY=5               # Poll creations per day
 
 # Note: Image generation limits are controlled separately (see Image Generation section)
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# Message Processing Lock
+# Prevents the bot from processing multiple messages from the same user simultaneously
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# Enable processing lock (prevents queue buildup when bot has long processing delays)
+ENABLE_PROCESSING_LOCK=true
+
+# Use Redis for distributed processing locks (recommended for multi-instance deployments)
+# Falls back to in-memory locks if Redis is unavailable
+PROCESSING_LOCK_USE_REDIS=true
+
+# Lock timeout in seconds (safety mechanism to prevent permanent locks)
+# If processing takes longer than this, lock is automatically released
+# Range: 30-3600 seconds (30 sec - 1 hour)
+# Default: 300 (5 minutes)
+PROCESSING_LOCK_TTL_SECONDS=300
+
 USE_REDIS=false
 REDIS_URL=redis://localhost:6379/0
 ADMIN_USER_IDS=
