--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    networks:
+      default:
+        ipv4_address: 172.19.0.10
 
   warp:
     build:
@@ -34,6 +37,9 @@ services:
       timeout: 5s
       retries: 12
     restart: unless-stopped
+    # Allow warp (and bot sharing its network) to access Redis via static IP
+    extra_hosts:
+      - "redis:172.19.0.10"
 
   bot:
     build:
@@ -57,6 +63,13 @@ services:
       - REDIS_URL=redis://redis:6379/0
 # Note: Redis data and models are now stored in local folders (./redis-data and ./models)
 # This keeps all persistent data within the codebase directory for easier backup and management
+
+networks:
+  default:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.19.0.0/16
 
 volumes:
   warp-state:
